feat(User): added update for user and documentation
